<resources>
    <string name="app_name">Github User</string>
    <string name="github_user">Github User</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="username">azmirizkifar20</string>
    <string name="profile_url">https://github.com/azmirizkifar20</string>
    <string name="image_description">Image description</string>
    <string name="search">Search user</string>
    <string name="full_name">Full name</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="about_me">About me</string>
    <string name="made_with">Made with</string>
    <string name="by_azmirf20">by azmirf20</string>
    <string name="profile">Profile</string>
    <string name="intro">Hello, my name is Muhamad Azmi Rizkifar. I am currently a software engineering student at Telkom University</string>
    <string name="email">m.azmirizkifar20@gmail.com</string>
    <string name="name">Muhamad Azmi Rizkifar</string>
    <string name="no_data">Data is empty</string>
    <string name="favorite">Favorite</string>
    <string name="preference_name">alarmPref</string>
    <string name="saved_switch">savedSwitch</string>
    <string name="favorite_user">Favorite users</string>
    <string name="alarm_message">alarms set at 9 o\'clock</string>
    <string name="reminder_setting">Reminder at 09.00 AM</string>
    <string name="reminder_message">Don\'t forget to check this apps!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>